# zeph

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.deps.yml  docker-compose.dev.yml  docker-compose.vault.yml  docker-compose.yml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml
config/: default.toml
crates/zeph-a2a/: Cargo.toml  README.md
crates/zeph-a2a/src/: card.rs  client.rs  discovery.rs  error.rs  jsonrpc.rs  lib.rs  types.rs
crates/zeph-a2a/src/server/: handlers.rs  mod.rs  router.rs  state.rs
crates/zeph-channels/: Cargo.toml  README.md
crates/zeph-channels/benches/: markdown_performance.rs
crates/zeph-channels/src/: any.rs  cli.rs  error.rs  lib.rs  line_editor.rs  markdown.rs  telegram.rs
crates/zeph-channels/src/discord/: gateway.rs  mod.rs  rest.rs
crates/zeph-channels/src/slack/: api.rs  events.rs  mod.rs
crates/zeph-channels/tests/: memory_profile.rs
crates/zeph-core/: Cargo.toml  README.md
crates/zeph-core/benches/: context_building.rs
crates/zeph-core/src/: agent.rs  bootstrap.rs  channel.rs  config.rs  config_watcher.rs  context.rs  cost.rs  daemon.rs  diff.rs  http.rs  lib.rs  metrics.rs  project.rs  redact.rs  vault.rs
crates/zeph-core/src/agent/: builder.rs  commands.rs  context.rs  error.rs  index.rs  learning.rs  mcp.rs  message_queue.rs  mod.rs  persistence.rs  skill_management.rs  streaming.rs  tool_execution.rs  trust_commands.rs  utils.rs
crates/zeph-core/src/config/: env.rs  mod.rs  tests.rs  types.rs
crates/zeph-core/src/config/snapshots/: zeph_core__config__types__tests__config_default_snapshot.snap
crates/zeph-core/src/pipeline/: builder.rs  builtin.rs  mod.rs  parallel.rs  step.rs
crates/zeph-gateway/: Cargo.toml  README.md
crates/zeph-gateway/src/: error.rs  handlers.rs  lib.rs  router.rs  server.rs
crates/zeph-index/: Cargo.toml  README.md
crates/zeph-index/migrations/: 001_chunk_metadata.sql
crates/zeph-index/src/: chunker.rs  context.rs  error.rs  indexer.rs  languages.rs  lib.rs  repo_map.rs  retriever.rs  store.rs  watcher.rs
crates/zeph-llm/: Cargo.toml  README.md
crates/zeph-llm/src/: any.rs  candle_whisper.rs  claude.rs  compatible.rs  error.rs  extractor.rs  http.rs  lib.rs  mock.rs  ollama.rs  openai.rs  orchestrator.rs  provider.rs  retry.rs  router.rs  sse.rs  stt.rs  whisper.rs
crates/zeph-llm/src/candle_provider/: embed.rs  generate.rs  loader.rs  mod.rs  template.rs
crates/zeph-llm/src/orchestrator/: classifier.rs  mod.rs  router.rs
crates/zeph-mcp/: Cargo.toml  README.md
crates/zeph-mcp/src/: client.rs  error.rs  executor.rs  lib.rs  manager.rs  prompt.rs  registry.rs  security.rs  tool.rs
crates/zeph-memory/: Cargo.toml  README.md
crates/zeph-memory/benches/: token_estimation.rs
crates/zeph-memory/migrations/: 001_init.sql  002_embeddings_metadata.sql  003_summaries.sql  005_skill_versions.sql  006_message_parts.sql  009_skill_trust.sql
crates/zeph-memory/src/: embedding_registry.rs  embedding_store.rs  error.rs  in_memory_store.rs  lib.rs  qdrant.rs  qdrant_ops.rs  semantic.rs  sqlite.rs  types.rs  vector_store.rs
crates/zeph-memory/src/document/: error.rs  mod.rs  pipeline.rs  splitter.rs  types.rs
crates/zeph-memory/src/document/loader/: mod.rs  pdf.rs  text.rs
crates/zeph-memory/src/sqlite/: history.rs  messages.rs  mod.rs  skills.rs  summaries.rs  trust.rs
crates/zeph-memory/tests/: document_integration.rs  qdrant_integration.rs
crates/zeph-scheduler/: Cargo.toml  README.md
crates/zeph-scheduler/src/: error.rs  lib.rs  scheduler.rs  store.rs  task.rs  update_check.rs
crates/zeph-skills/: Cargo.toml  README.md
crates/zeph-skills/benches/: matcher.rs
crates/zeph-skills/src/: error.rs  evolution.rs  lib.rs  loader.rs  manager.rs  matcher.rs  prompt.rs  qdrant_matcher.rs  registry.rs  resource.rs  trust.rs  watcher.rs
crates/zeph-tools/: Cargo.toml  README.md
crates/zeph-tools/src/: anomaly.rs  audit.rs  composite.rs  config.rs  executor.rs  file.rs  lib.rs  overflow.rs  permissions.rs  registry.rs  scrape.rs  shell.rs  trust_gate.rs
crates/zeph-tools/src/filter/: cargo_build.rs  clippy.rs  dir_listing.rs  git.rs  log_dedup.rs  mod.rs  security.rs  test_output.rs
crates/zeph-tools/src/filter/snapshots/: zeph_tools__filter__cargo_build__tests__cargo_build_error_snapshot.snap  zeph_tools__filter__cargo_build__tests__cargo_build_filter_snapshot.snap  zeph_tools__filter__clippy__tests__clippy_grouped_warnings_snapshot.snap  zeph_tools__filter__git__tests__filter_diff_snapshot.snap  zeph_tools__filter__git__tests__filter_status_snapshot.snap
crates/zeph-tui/: Cargo.toml  README.md
crates/zeph-tui/src/: app.rs  channel.rs  command.rs  error.rs  event.rs  file_picker.rs  highlight.rs  hyperlink.rs  layout.rs  lib.rs  metrics.rs  test_utils.rs  theme.rs
crates/zeph-tui/src/widgets/: chat.rs  command_palette.rs  confirm.rs  diff.rs  file_picker.rs  help.rs  input.rs  memory.rs  mod.rs  resources.rs  skills.rs  splash.rs  status.rs
crates/zeph-tui/src/widgets/snapshots/: zeph_tui__widgets__confirm__tests__confirm_with_prompt.snap  zeph_tui__widgets__file_picker__tests__file_picker_empty_query_snapshot.snap  zeph_tui__widgets__file_picker__tests__file_picker_with_query_snapshot.snap  zeph_tui__widgets__help__tests__help_default.snap  zeph_tui__widgets__input__tests__input_insert_mode.snap  zeph_tui__widgets__input__tests__input_normal_mode.snap  zeph_tui__widgets__memory__tests__memory_with_stats.snap  zeph_tui__widgets__resources__tests__resources_with_provider.snap  zeph_tui__widgets__skills__tests__skills_with_data.snap  zeph_tui__widgets__splash__tests__splash_default.snap  zeph_tui__widgets__status__tests__status_bar_snapshot.snap
crates/zeph-tui/tests/: e2e.rs
docker/: docker-compose.dev.yml  docker-compose.yml
docs/: book.toml
install/: install.sh
migrations/: 001_init.sql  004_skill_usage.sql  008_fts5.sql  010_input_history.sql
(+106 files in other folders)
