[package]
name = "zeph-channels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
pulldown-cmark.workspace = true
teloxide.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tracing.workspace = true
zeph-core.workspace = true

[[bench]]
name = "markdown_performance"
harness = false

[dev-dependencies]
criterion.workspace = true

[lints]
workspace = true
