[package]
name = "zeph-channels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zeph-channels"
keywords.workspace = true
categories.workspace = true
description = "Multi-channel I/O adapters (CLI, Telegram, Discord, Slack) for Zeph"
readme = "README.md"

[features]
discord = ["dep:tokio-tungstenite", "dep:futures"]
slack = ["dep:axum", "dep:hmac", "dep:sha2", "dep:subtle"]

[dependencies]
axum = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
hmac = { version = "0.12", optional = true }
pulldown-cmark.workspace = true
reqwest = { workspace = true, features = ["rustls", "json"] }
crossterm.workspace = true
unicode-width.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = { version = "0.10", optional = true }
subtle = { workspace = true, optional = true }
teloxide.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-tungstenite = { workspace = true, optional = true, features = ["connect", "rustls-tls-native-roots"] }
tracing.workspace = true
zeph-core.workspace = true

[[bench]]
name = "markdown_performance"
harness = false

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[lints]
workspace = true
