[package]
name = "zeph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
index = ["dep:zeph-index"]
mcp = ["dep:zeph-mcp"]
self-learning = ["zeph-skills/self-learning"]
vault-age = ["dep:age", "dep:serde_json", "dep:thiserror"]

[dependencies]
age = { workspace = true, optional = true }
anyhow.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
zeph-index = { workspace = true, optional = true }
zeph-llm.workspace = true
zeph-mcp = { workspace = true, optional = true, features = ["qdrant"] }
zeph-memory.workspace = true
zeph-skills = { workspace = true, features = ["qdrant"] }
zeph-tools.workspace = true

[dev-dependencies]
serde_json.workspace = true
serial_test.workspace = true
tempfile.workspace = true

[lints]
workspace = true
