[package]
name = "zeph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
index = ["dep:zeph-index"]
mcp = ["dep:zeph-mcp"]
daemon = []
self-learning = ["zeph-skills/self-learning"]
vault-age = ["dep:age"]

[dependencies]
age = { workspace = true, optional = true }
anyhow.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
zeph-index = { workspace = true, optional = true }
zeph-llm.workspace = true
zeph-mcp = { workspace = true, optional = true, features = ["qdrant"] }
zeph-memory.workspace = true
zeph-skills = { workspace = true, features = ["qdrant"] }
zeph-tools.workspace = true

[[bench]]
name = "context_building"
harness = false

[dev-dependencies]
criterion.workspace = true
serial_test.workspace = true
tempfile.workspace = true
zeph-llm = { workspace = true, features = ["mock"] }

[lints]
workspace = true
