[package]
name = "zeph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
candle = ["zeph-llm/candle"]
cuda = ["zeph-llm/cuda"]
daemon = []
index = ["dep:zeph-index"]
metal = ["zeph-llm/metal"]

[dependencies]
age.workspace = true
anyhow.workspace = true
futures.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
zeph-index = { workspace = true, optional = true }
zeph-llm.workspace = true
zeph-mcp.workspace = true
zeph-memory.workspace = true
zeph-skills.workspace = true
zeph-tools.workspace = true

[[bench]]
name = "context_building"
harness = false

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
schemars.workspace = true
serial_test.workspace = true
tempfile.workspace = true
zeph-llm = { workspace = true, features = ["mock"] }
zeph-memory = { workspace = true, features = ["mock"] }

[lints]
workspace = true
