[package]
name = "zeph-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
blake3.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "sync", "time"] }
tower.workspace = true
tower-http = { workspace = true, features = ["limit", "trace"] }
tracing.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true

[lints]
workspace = true
