[package]
name = "zeph-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
eventsource-stream.workspace = true
futures-core.workspace = true
ollama-rs.workspace = true
reqwest = { workspace = true, features = ["json", "rustls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
