[package]
name = "zeph-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
qdrant = ["dep:blake3", "dep:qdrant-client", "dep:uuid"]

[dependencies]
blake3 = { workspace = true, optional = true }
qdrant-client = { workspace = true, optional = true, features = ["serde"] }
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "sync", "time", "rt"] }
tracing.workspace = true
uuid = { workspace = true, optional = true, features = ["v5"] }
zeph-llm.workspace = true
zeph-tools.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
