[package]
name = "zeph-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
qdrant-client = { workspace = true, features = ["serde"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { workspace = true, features = ["rt"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
zeph-llm.workspace = true

[dev-dependencies]
testcontainers.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream.workspace = true

[lints]
workspace = true
