[package]
name = "zeph-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pdf-extract = { workspace = true, optional = true }
qdrant-client = { workspace = true, features = ["serde"] }
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
zeph-llm.workspace = true

[features]
default = []
mock = []
pdf = ["dep:pdf-extract"]

[[bench]]
name = "token_estimation"
harness = false

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
testcontainers.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream.workspace = true
zeph-llm = { workspace = true, features = ["mock"] }

[lints]
workspace = true
