[package]
name = "zeph-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zeph-scheduler"
keywords.workspace = true
categories.workspace = true
description = "Cron-based periodic task scheduler with SQLite persistence for Zeph"
readme = "README.md"

[dependencies]
chrono.workspace = true
cron = "0.15"
reqwest = { workspace = true, features = ["json", "rustls"] }
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true

[lints]
workspace = true
